fixed search bar on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,33 @@ right:38vw;
 z-index:0;
 }
 
+input[type=search] {
+    
+    position: absolute;
+    width: 52px;
+    height:52px;
+   border-style:none;
+    font-size: 16px;
+    background-color: #616262;
+    background-image: url('assets/search.png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+    -webkit-transition: width 0.1s ease-in-out;
+    transition: width 0.4s ease-in-out;
+    color:white;
+    top: -10vh;
+    left:-90vw;
+    margin-left:0;
+    cursor:pointer;
+  }
+  input[type=search]:hover {
+  opacity:.8}
 
+  input[type=search]:focus {
+    width: 200px;
+    color:white;
+  }
 #location {
     margin: 50px 100px;
     position: relative;
@@ -35,60 +61,8 @@ z-index:0;
     position: relative;
   }
   
-  input[type="search"] {
-    height: 60px;
-    font-size: 32px;
-    display: inline-block;
-    font-family: "Lato";
-    font-weight: 100;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 3px;
-    padding-right: 60px;
-    width: 0px;
-    position: absolute;
-    top: -10vh;
-    right: -5vw;
-    margin-right:20px;
-    background: none;
-    z-index: 6;
-    transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
-    cursor: pointer;
-  }
+
   
-  input[type="search"]:focus:hover {
-    border-bottom: 1px solid #BBB;
-  }
-  
-  input[type="search"]:focus {
-    width: 200px;
-    z-index: 1;
-    border-bottom: 1px solid #BBB;
-    cursor: text;
-  }
-  input[type="submit"] {
-    height: 67px;
-    width: 63px;
-    display: inline-block;
-    color:white;
-    float: right;
-    background: url("./assets/search.png") center center no-repeat;
-    text-indent: -10000px;
-    border: none;
-    position: absolute;
-    top: -10vh;
-    right: -5vw;
-    z-index: 2;
-    cursor: pointer;
-    opacity: 0.4;
-    cursor: pointer;
-    transition: opacity .4s ease;
-  }
-  
-  input[type="submit"]:hover {
-    opacity: 0.8;
-  }
 #conditions{font-size:3vh;
 position:absolute;
 margin-top:10vh;
@@ -398,10 +372,10 @@ width:200px;}
             margin-top:-8vh;
         }
 
-
-    #location{position:absolute;
-    top:-24vh;
-left:75vw;}
+        input[type=search] {
+            margin-left:20vw;
+            top:-32vh;
+        }
 }
 
 
@@ -412,7 +386,8 @@ left:75vw;}
     margin-right:4vw
 
 }
-#city{margin-left:40vw;}
+#city{margin-left:30vw;
+margin-top:-39vh;}
 #squares{left:8vw;}
 
 
@@ -422,23 +397,14 @@ left:75vw;}
 
 .weather-icon{
     position:relative;
-    top:-16vh;
+    top:-28vh;
     
     left:14vw;
     z-index:0;
     }
 #hi-lo{margin-top:0;
 margin-left:5vw;}
-#search_submit{
-  right:85vw;
-  margin-top:2vh;
-  }
 
-  input[type="search"]:focus {
-    width: 200px;
-    z-index: 1;
-    border-bottom: 1px solid #BBB;
-    cursor: text;
-  }
+
 
 }
